# rust-graphics

./: Cargo.toml  index.html  index.js  package.json
src/: app_state.rs  common_funcs.rs  gl_setup.rs  lib.rs
src/programs/: color_2d.rs  color_2d_gradient.rs  mod.rs
