[package]
authors = ["Simranjeet Singh"]
edition = "2018"
name = "rust-graphics"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "=0.1.5"
js-sys = "0.3.19"
lazy_static = "1.3.0"
nalgebra = "0.27.1"
wasm-bindgen = "0.2.44"

[dependencies.web-sys]
features = [
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'MouseEvent',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
]
version = "0.3.4"
